fix bugssssss